# libabigail

./: meson.build
include/: meson.build
src/: meson.build
tests/: meson.build
tools/: meson.build
